# kafka-producer-rust-example

./: Cargo.toml  LICENSE  README.md
src/: main.rs
