[package]
name = "ultra_faster_producer"
version = "0.1.0"
authors = ["Jefferson Marchetti Ferreira <jefferson.marchetti@xpi.com.br>"]
readme = "README.md"
license = "MIT"
description = "Rust wrapper for librdkafka"
keywords = ["kafka", "rdkafka"]
categories = ["api-bindings"]
edition = "2018"
exclude = ["Cargo.lock"]

[dependencies]
datetime = "0.5"
futures = "0.1"
tokio   = "0.1.21"
clap    = "2.33.0"
chrono = "0.4"
rdkafka = "0.22.0"
rdkafka-sys = "=1.2.2"

#    [dependencies.rdkafka]
#    version     = "~0.21"
#    features    = ["ssl", "sasl"]